// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH cmvcxy sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM TJfWV"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH cmvcxy sc-EHOje kAxTfU"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM dSWnSJ"
    disabled={true}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH begKAY sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM bsuCEw"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH cmvcxy sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="sc-bZQynM TJfWV"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH hexTtb sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM eKWFmD"
    disabled={false}
  >
    λ
  </span>
</div>
`;
